增加无障碍辅助功能 远程，本地服务器请求兼容

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="menu_home">群聊列表</string>
     <string name="menu_gallery">单聊消息</string>
     <string name="menu_slideshow">白名单</string>
-    <string name="hongbao">chat</string>
+    <string name="hongbao">值班小能手</string>
 </resources>
